--- a/public/index.html
+++ b/public/index.html
@@ -15,59 +15,15 @@
 		<main>
 			<h1>Demo: Form Submission</h1>
 
-			<blockquote>
-				<p>This is a demonstration of Cloudflare Pages with Functions.</p>
-				<p>Pages deployed a <code>/public</code> directory, containing a HTML document (this webpage) and a <code>/functions</code> directory, which contains the Cloudflare Workers code for the API endpoint this <code>&lt;form&gt;</code> references.</p>
-				<p><b>NOTE:</b> On form submission, the API endpoint responds with a JSON representation of the data. There is no JavaScript running in this example.</p>
-			</blockquote>
-
-			<form method="POST" action="/api/submit">
-				<div class="input">
-					<label for="name">Full Name</label>
-					<input id="name" name="name" type="text" />
-				</div>
-
-				<div class="input">
-					<label for="email">Email Address</label>
-					<input id="email" name="email" type="email" />
-				</div>
-
-				<div class="input">
-					<label for="referers">How did you hear about us?</label>
-					<select id="referers" name="referers">
-						<option hidden disabled selected value></option>
-						<option value="Facebook">Facebook</option>
-						<option value="Twitter">Twitter</option>
-						<option value="Google">Google</option>
-						<option value="Bing">Bing</option>
-						<option value="Friends">Friends</option>
-					</select>
-				</div>
-
-				<div class="checklist">
-					<label>What are your favorite movies?</label>
-					<ul>
-						<li>
-							<input id="m1" type="checkbox" name="movies" value="Space Jam" />
-							<label for="m1">Space Jam</label>
-						</li>
-						<li>
-							<input id="m2" type="checkbox" name="movies" value="Little Rascals" />
-							<label for="m2">Little Rascals</label>
-						</li>
-						<li>
-							<input id="m3" type="checkbox" name="movies" value="Frozen" />
-							<label for="m3">Frozen</label>
-						</li>
-						<li>
-							<input id="m4" type="checkbox" name="movies" value="Home Alone" />
-							<label for="m4">Home Alone</label>
-						</li>
-					</ul>
-				</div>
-
-				<button type="submit">Submit</button>
-			</form>
+			<body>
+				<h1>Sales enquiry</h1>
+				<form data-static-form-name="sales">
+				  <label>Email address <input type="email" name="email" /></label>
+				  <label>Message <textarea name="message"></textarea></label>
+				  <button type="Submit">
+				</form>
+			  </body>
+			  
 		</main>
 
 	</body>
